# google-dns-dynamic-rust

./: .gitignore  Cargo.toml  README.md
src/: gddns.rs  lib.rs  main.rs
