[package]
name = "google-dns-dynamic-rust"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/vjyanand/google-dns-dynamic-rust.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false,features = ["blocking", "rustls-tls"] }
