[package]
name = "google-dns-dynamic"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/vjyanand/google-dns-dynamic-rust.git"
license = "MIT OR Apache-2.0"
description = "Client to update google domains dynamic dns"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "**/*.rs",
    "Cargo.toml",
]

[[bin]]
name = "google-dns-dynamic"
path = "src/main.rs"

[lib]
name = "googlednsdynamic"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false,features = ["blocking", "rustls-tls"] }

